Having issues with icon; working on local storage

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ aside {
   justify-content: space-between;
 };
 
-#dailyForecast {
+.dailyForecast {
   display: flex;
   background-color: #0475ee;
   color: white;
