--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ form input {
 
 aside {
   background-color: #f0f7fe;
-  width: 25%;
+  width: 20%;
   height: 50em;
   margin: 10px;
 }
@@ -95,4 +95,12 @@ aside {
 #currentUV{
   font-size: 20px;
   color: black
+}
+
+.list-group{
+  font-size: 16px;
+  background-color:beige;
+  border-style: solid;
+  border-color: black;
+  list-style-type: none;
 }
