--- a/style.css
+++ b/style.css
@@ -59,6 +59,12 @@ aside {
   height: 25em
 }
 
+#h2-week {
+  margin: 10px;
+  padding: 30px;
+  text-align: center;
+}
+
 #five-day {
   display: flex;
   justify-content: space-between;
